ENG-376 Fix Detail Page Alignment and Wrappers
Summary:
Fix the universe detail page component alignment.
Fix Side Nav Bar issue   ENG-375
Add new panel layout to components

Test Plan:
Go to Universe Detail page by clicking on the view button on the universe table or entering the url
http://localhost:3000/universes/:universeUUID
The component layout should be as shown
{F709}

{F712}

Reviewers: karthik, ram

Reviewed By: ram

Subscribers: eng

Differential Revision: https://phabricator.dev.yugabyte.com/D465

--- a/managed/ui/src/stylesheets/App.css
+++ b/managed/ui/src/stylesheets/App.css
@@ -16,7 +16,7 @@
     margin: 0 0 0 120px;
     padding: 0 30px;
     border-left: 1px solid #e7e7e7;
-    background-color: #fff;
+    background-color: transparent;
     min-height: 100%;
 }
 
@@ -98,5 +98,9 @@ ul {
 
 .top-nav-menu-button {
     width: 30px;
+}
+
+.yb-nav-bar {
+    background-color: #fff;
 }
 
